--- a/forms/styles.css
+++ b/forms/styles.css
@@ -231,3 +231,36 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.response-card {
+  background-color: white;
+  border-radius: 16px;
+  box-shadow: 1px 1px 5px var(--shadow-color);
+  padding: 16px;
+  text-align: center;
+  max-width: 80%;
+  margin: auto;
+  margin-top: 20px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.card-content {
+  text-align: center;
+}
+
+.buttons {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+.card-content p {
+  margin-top: 30px;
+}
+
+.response-card button {
+  margin-top: 10px;
+}
