--- a/forms/styles.css
+++ b/forms/styles.css
@@ -53,7 +53,6 @@ buton:disabled {
 }
 
 .page_container {
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -153,6 +152,7 @@ buton:disabled {
   border-radius: 16px;
   box-shadow: 1px 1px 5px var(--shadow-color);
   min-width: 400px;
+  margin-bottom: 20px;
 }
 
 .submit-btn {
@@ -164,6 +164,7 @@ buton:disabled {
   /* width: 300px; */
   gap: 0.5rem;
   align-items: center;
+  margin: 10px;
 }
 
 /* ----------------------------------- */
@@ -230,4 +231,38 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+.response-card {
+  background-color: white;
+  border-radius: 16px;
+  box-shadow: 1px 1px 5px var(--shadow-color);
+  padding: 16px;
+  text-align: center;
+  max-width: 80%;
+  margin: auto;
+  margin-top: 20px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+
+.card-content {
+  text-align: center;
+}
+
+.buttons {
+  margin-top: 20px;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+}
+
+
+.card-content p {
+  margin-top: 30px;
+}
+
+.response-card button {
+  margin-top: 10px;
 }
